--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,9 +3,33 @@
     <head>
         <meta charset="utf-8">
         <title>Hotel Managment System</title>
-        <link rel="stylesheet" href="">
+        
+        <link rel="stylesheet" href="/css/login.css">
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
-        
+        <div class="login-container">
+            <!-- <img src="assets/avatar.jpg" alt="avatar image"> -->
+            <form action="">
+                <h1>LOGIN</h1>
+                <div class="socials">
+                    <i class="fab fa-google fa-2x social-icon"></i>
+                    <i class="fab fa-facebook fa-2x social-icon"></i>
+                    <i class="fab fa-apple fa-2x social-icon"></i>
+                </div>
+                <div>
+                    <label>Username</label>
+                    <input type="text" name="username" placeholder="Enter your username here" value="">
+                </div>
+                <div>
+                    <label>Password</label>
+                    <input type="password" name="password" placeholder="Enter your password here" value="">
+                    
+                </div>
+                <button type="submit">LOGIN</button>
+                <button type="submit">SIGN-UP</button>
+               
+            </form>
+        </div>
     </body>
 </html>
