--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,9 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.com">
     <head>
         <meta charset="utf-8">
-        <title>Hotel Managment System</title>
+        <title>Hotel Management System</title>
         
-        <link rel="stylesheet" href="/css/login.css">
+        <link rel="stylesheet" href="css/login.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     </head>
     <body>
@@ -27,7 +27,7 @@
                     
                 </div>
                 <button type="submit">LOGIN</button>
-                <button type="submit">SIGN-UP</button>
+                <div class="sign_up"><a href="/signup">SIGN UP</a></div>
                
             </form>
         </div>
