--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,7 +26,7 @@
                     <input type="password" name="password" placeholder="Enter your password here" value="">
                     
                 </div>
-                <button type="submit">LOGIN</button>
+                <div class="sign_up"><a href="/hotel">LOGIN</a></div>
                 <div class="sign_up"><a href="/signup">SIGN UP</a></div>
                
             </form>
