--- a/src/main/resources/templates/room_reservation.html
+++ b/src/main/resources/templates/room_reservation.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title></title>
+    <title>Hyatt Palace-Book A room now</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/room_reservation.css" rel="stylesheet">
