--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -21,7 +21,11 @@
                     <input type="password" placeholder="password">
                 </div>
                 <div class="form_info">
-                    <button class="add_user">Register</button>
+                    <button class="add_user">
+                        <a href="/hotel">
+                            Register
+                        </a>
+                    </button>
                 </div>
             </div>
             <div class="right_side">
