--- a/src/main/resources/templates/facilities.html
+++ b/src/main/resources/templates/facilities.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>Facilities</title>
+    <title>Hyatt Palace-Facilities</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/facilities.css" rel="stylesheet">
