--- a/src/main/resources/static/css/room_reservation.css
+++ b/src/main/resources/static/css/room_reservation.css
@@ -10,7 +10,11 @@ body {
     padding-left: 150px;
     padding-top: 10px;
     padding-bottom: 10px;
-    background-image: url(\resources\assets\hotel.jpg);
+    background-image: url("https://assets.hyatt.com/content/dam/hyatt/hyattdam/images/2018/09/06/1111/Hyatt-Regency-Mumbai-P244-Facade.jpg/Hyatt-Regency-Mumbai-P244-Facade.16x9.jpg");
+    /* background-position: center;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;  */
     float: center;
     max-width: 600px;
     max-height: 600px;
