Updated Booking and Facilities

--- a/src/main/resources/templates/facilities.html
+++ b/src/main/resources/templates/facilities.html
@@ -13,6 +13,33 @@
 </head>
 
 <body>
+
+    <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
+        <a class="navbar-brand  " href="/hotel">HYATT PALACE</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ml-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="/hotel">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/room_reservation">Booking</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/facilities">Facilities</a>
+                </li>
+
+                <li class="nav-item">
+                    <a class="nav-link" href="/restaurant">Restaurant</a>
+                </li>
+
+            </ul>
+        </div>
+    </nav>
+
     <h1 style="font-weight: bold; font-size:60px">Facilities</h1>
     <div class="container">
         <div class="card-deck">
@@ -54,6 +81,43 @@
             </div>
         </div>
     </div>
+    <footer class="footer">
+        <div class="container">
+            <div class="row">
+                <div class="footer-col">
+                    <h4>Taj Groups</h4>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="/room_reservation">Booking</a></li>
+                        <li><a href="#">Restaurant</a></li>
+                        <li><a href="#">Privacy Policy</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Get Help</h4>
+                    <ul>
+                        <li><a href="#">Contact No . 022 9897 2456</a</li>
+                <li><a href="#">Mail : hotels@gmail.com</a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>Address</h4>
+                    <ul>
+                        <li><a href="#">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Cupiditate adipisci quia ab omnis id ipsum quae inventore </a></li>
+                    </ul>
+                </div>
+                <div class="footer-col">
+                    <h4>follow us</h4>
+                    <div class="social-links">
+                        <a href="#"><i class="fab fa-google"></i></a>
+                        <a href="#"><i class="fab fa-facebook-f"></i></a>
+                        <a href="#"><i class="fab fa-instagram"></i></a>
+                        <a href="#"><i class="fab fa-twitter"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 
 </html>
