added twitter in place of apple

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -15,7 +15,7 @@
                 <div class="socials">
                     <i class="fab fa-google fa-2x social-icon"></i>
                     <i class="fab fa-facebook fa-2x social-icon"></i>
-                    <i class="fab fa-apple fa-2x social-icon"></i>
+                    <i class="fab fa-twitter-square fa-2x social-icon"></i>
                 </div>
                 <div>
                     <label>Username</label>
