--- a/src/main/resources/templates/signup.html
+++ b/src/main/resources/templates/signup.html
@@ -50,10 +50,10 @@
                         </button>
                         <button>
                             <div class="icon_holder">
-                                <i class="fab fa-apple"></i>
+                                <i class="fab fa-twitter"></i>
                             </div>
                             <div class="text_holder">
-                                Continue with apple
+                                Continue with twitter
                             </div>
                         </button>
                     </div>
