--- a/bin/src/main/resources/templates/hotel.html
+++ b/bin/src/main/resources/templates/hotel.html
@@ -18,6 +18,7 @@
 </head>
 
 <body>
+<div class="authenticated">
     <nav class="navbar navbar-expand-lg navbar-dark navbar-custom">
         <a class="navbar-brand  " href="/hotel">HYATT PALACE</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -319,7 +320,8 @@
             </div>
         </div>
     </footer>
-
+</div>
 </body>
+
 
 </html>
