implemented spring security

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Hotel Management System</title>
         
-        <link rel="stylesheet" href="css/login.css">
+        <link rel="stylesheet" href="css/index.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta2/css/all.min.css" integrity="sha512-YWzhKL2whUzgiheMoBFwW8CKV4qpHQAEuvilg9FAn5VJUDwKZZxkJNuGM4XkWuk94WCrrwslk8yWNGmY1EduTA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
         
@@ -14,7 +14,7 @@
     <body>
         <div class="login-container unauthenticated">
             <!-- <img src="assets/avatar.jpg" alt="avatar image"> -->
-            <form action="">
+            <form action="login">
                 <h1>LOGIN</h1>
                 <div class="socials">
                    <a href="/oauth2/authorization/google"><i class="fab fa-google fa-2x social-icon"></i></a>
@@ -30,7 +30,7 @@
                     <input type="password" name="password" placeholder="Enter your password here" value="">
                     
                 </div>
-                <div class="sign_up"><a href="/hotel">LOGIN</a></div>
+                <div class="sign_up"><a>LOGIN</a></div>
                 <div class="sign_up"><a href="/signup">SIGN UP</a></div>
                
             </form>
