Added contact number input field

--- a/src/main/resources/templates/room_reservation.html
+++ b/src/main/resources/templates/room_reservation.html
@@ -80,8 +80,17 @@
                     required
                     th:value="${rooms.email}">
                 </div>
+                <div class="elem-group">
+                    <input type="text" 
+                    id="email" 
+                    placeholder="contact number" 
+                    name="phone_no" 
+                    required
+                    th:value="${rooms.phone_no}">
+                </div>
                 
             </div>
+            
         </div>
         <div class="row">
             <div class="column">
