--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,23 +1,48 @@
+
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 	<head>
 		<title>Please Log In</title>
+		 <link rel="stylesheet" href="css/login.css">
+		<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+		<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 	</head>
 	<body>
-		<h1>Please Log In</h1>
-		<div th:if="${param.error}">
+		<div id="login">
+        <h3 class="text-center text-white pt-5">Login form</h3>
+        <div th:if="${param.error}">
 			Invalid username and password.</div>
 		<div th:if="${param.logout}">
-			You have been logged out.</div>
-		<form th:action="@{/login}" method="post">
-			<div>
-			<input type="text" name="username" placeholder="Username"/>
-			</div>
-			<div>
-			<input type="password" name="password" placeholder="Password"/>
-			</div>
-			<a>Register here</a>
-			<input type="submit" value="Log in" />
-		</form>
+		
+	You have been logged out.
+	</div>
+        
+        <div class="container">
+            <div id="login-row" class="row justify-content-center align-items-center">
+                <div id="login-column" class="col-md-6">
+                    <div id="login-box" class="col-md-12">
+                        <form name="f" id="login-form" class="form" th:action="@{/login}" action="#" method="post">
+                            <h3 class="text-center text-info">Login</h3>
+                            <div class="form-group">
+                                <label for="username" class="text-info">Username:</label><br>
+                                <input type="text" name="username" id="username" class="form-control">
+                            </div>
+                            <div class="form-group">
+                                <label for="password" class="text-info">Password:</label><br>
+                                <input type="password" name="password" id="password" class="form-control">
+                            </div>
+                            <div class="form-group">
+                               
+                                <input type="submit" name="submit" class="btn btn-info btn-md" value="submit">
+                                  <a href="/signup" class="text-info">Register here</a>
+                            </div>
+                           
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 	</body>
 </html>
