--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,12 +11,7 @@
 	<body>
 		<div id="login">
         <h3 class="text-center text-white pt-5">Login form</h3>
-        <div th:if="${param.error}">
-			Invalid username and password.</div>
-		<div th:if="${param.logout}">
-		
-	You have been logged out.
-	</div>
+       
         
         <div class="container">
             <div id="login-row" class="row justify-content-center align-items-center">
@@ -24,6 +19,12 @@
                     <div id="login-box" class="col-md-12">
                         <form name="f" id="login-form" class="form" th:action="@{/login}" action="#" method="post">
                             <h3 class="text-center text-info">Login</h3>
+                            <div th:if="${param.error}" class="alert alert-danger">
+			Invalid username and password.</div>
+		<div th:if="${param.logout}">
+		
+	You have been logged out.
+	</div>
                             <div class="form-group">
                                 <label for="username" class="text-info">Username:</label><br>
                                 <input type="text" name="username" id="username" class="form-control">
