--- a/bin/src/main/resources/templates/userdashboard.html
+++ b/bin/src/main/resources/templates/userdashboard.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html lang="en">
 
 <head>
     <title>Hyatt Palace-Facilities</title>
@@ -10,10 +10,6 @@
 
 <body>
  <h1>Private user dashboard</h1>
- 
- <h4 th:text="${user.email}"></h4>
- <h4 th:text="${user.role}"></h4>
- 
 </body>
 
 </html>
