--- a/src/main/resources/static/css/room_reservation.css
+++ b/src/main/resources/static/css/room_reservation.css
@@ -3,11 +3,18 @@ h1 {
     color: blue;
     font-weight: bold;
 }
-
+form{
+	padding-top:100px;
+	padding-left:100px;
+	
+}
 body {
     background-image: url("https://assets.hyatt.com/content/dam/hyatt/hyattdam/images/2018/09/06/1111/Hyatt-Regency-Mumbai-P244-Facade.jpg/Hyatt-Regency-Mumbai-P244-Facade.16x9.jpg");
 }
-
+p{
+	color:white;
+	padding:0px;
+}
 label {
     display: block;
     font-family: 'Arial';
@@ -21,14 +28,14 @@ textarea {
     font-size: 1.25em;
     font-family: 'Arial';
     padding: 10px;
-    width: 390px;
+    width: 350px;
 }
 
 select {
     border-radius: 3px;
     padding-top: 25px;
     font-size: 1.25em;
-    width: 380px;
+    width: 350px;
 }
 
 div.elem-group {
@@ -39,17 +46,17 @@ div.elem-group {
 }
 
 div.elem-group1 {
-    width: 750px;
+    width: 700px;
     padding-top: 10px;
     padding-right: 50px;
-    padding-left: 270px;
+    padding-left: 250px;
     float: center;
 }
 
 textarea {
     height: 50px;
     padding-right: 10px;
-    width: 410px;
+    width: 350px;
 }
 
 hr {
@@ -71,16 +78,15 @@ button {
 
 button:hover {
     border: 2.1px solid white;
+    background-color: #3e8e41
 }
 
-div.card {
-    margin: 0 auto;
-    /* Added */
-    float: none;
-    /* Added */
-    margin-bottom: 10px;
-    /* Added */
+button:active {
+    background-color: #3e8e41;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
 }
+
 
 li {
     list-style-type: none;
