Update and Delete added for admin

--- a/src/main/resources/static/css/admin.css
+++ b/src/main/resources/static/css/admin.css
@@ -2,3 +2,16 @@
 	text-align: center;
 	margin: 3rem 0 3rem 0;
 }
+.udel_icons{
+	position: relative;
+	display: flex;
+	justify-content: spaced-even;
+}
+.udel_icons a{
+	position: relative;
+	display: flex;
+	justify-content: spaced-even;
+	text-decoration: none;
+	color: black;
+	margin: auto;
+}
